# papersketch_backend

./: .gitignore  README.md  pyproject.toml
docs/: revision_plan.md
src/papersketch_backend/: __init__.py  cache.py  evaluation.py  settings.py
src/papersketch_backend/api/: app.py  deps.py
src/papersketch_backend/api/routes/: compare.py  papersketch.py  structure.py
src/papersketch_backend/document/: __init__.py  chunking.py  fetch.py  figure_extraction.py  layout.py  models.py  reading_order.py  sections.py  text_blocks.py
src/papersketch_backend/knowledge/: sketch.py  summary.py
src/papersketch_backend/llm/: base.py  deepseek_client.py  gemini_client.py  openai_client.py  registry.py
src/papersketch_backend/pipeline/: preprocess.py  prompt.py  run.py  summarize.py
src/papersketch_backend/ui/: app.py
src/papersketch_backend/ui/templates/: index.html  result.html
tests/: test_entrypoints.py  test_evaluation.py
